terminado con el space round

--- a/flex.css
+++ b/flex.css
@@ -1,30 +1,6 @@
 .galeria {
-    display: flexbox;
+    display: flex;
     justify-content: space-around;
-}
-
-.uno {
-    direction: ;
+    flex-wrap: wrap;
     width: 300px;
-
-}
-.dos {
-    width: 300px;
-
-}
-.tres {
-    width: 300px;
-
-}
-.cuatro {
-    width: 300px;
-
-}
-.cinco {
-    width: 300px;
-
-}
-.seis {
-    width: 300px;
-
 }
